<resources>
    <string name="app_name">Dentisit</string>
    <string name="logo">logo</string>
    <string name="correo_electr_nico">Correo electrónico</string>
    <string name="correo_electronico">correo_electronico</string>
    <string name="contraseña">Contraseña</string>
    <string name="ingresar">INGRESAR</string>
    <string name="olvidaste_tu_contrase_a">¿Olvidaste tu contraseña?</string>
    <string name="o_inicia_sesi_n_con">O Inicia Sesión Con</string>
    <string name="google">google</string>
    <string name="apple">apple</string>
    <string name="inicia_sesi_n">Inicia Sesión</string>
    <string name="o_inicia_sesion_con">o inicia sesion con</string>
    <string name="o_inicia_sesi_n_conn">O Inicia Sesión Con</string>
    <string name="no_tienes_cuenta_reg_strate">¿No tienes cuenta? Regístrate</string>
    <string name="tienes_cuenta_inicia_sesi_n">Tienes cuenta? Inicia Sesión</string>
    <string name="crear_cuenta">Crear Cuenta</string>
    <string name="nombre_completo">Nombre completo</string>
    <string name="confirmar_contrase_a">Confirmar contraseña</string>
    <string name="registrarme">REGISTRARME</string>
    <string name="hola">Hola Richi!</string>
    <string name="buscar">Buscar</string>
    <string name="categorias">Categorias:</string>
    <string name="recomendado">Recomendado;</string>
    <string name="mi_ubicacion">Mi ubicacion</string>
    <string name="centro">Centro</string>
    <string name="mapa">mapa</string>
    <string name="mapa_cercano">Mapa cercano</string>
</resources>