<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient_blue">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imgProfile"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_margin="24dp"
        android:src="@drawable/ic_dentist_logo"
        app:shapeAppearanceOverlay="@style/CircleImage"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvGreeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hola"
        android:textColor="#FFFFFF"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_marginStart="12dp"
        app:layout_constraintTop_toTopOf="@id/imgProfile"
        app:layout_constraintBottom_toBottomOf="@id/imgProfile"
        app:layout_constraintStart_toEndOf="@id/imgProfile" />

    <EditText
        android:id="@+id/etSearchHome"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_search_bar"
        android:hint="@string/buscar"
        android:importantForAutofill="no"
        android:paddingStart="20dp"
        android:drawableEnd="@android:drawable/ic_menu_search"
        android:drawablePadding="10dp"
        android:paddingEnd="20dp"
        app:layout_constraintTop_toBottomOf="@id/imgProfile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="TextFields" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/bg_home_container"
        app:layout_constraintTop_toBottomOf="@id/etSearchHome"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="25dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/categorias"
                android:textSize="20sp"
                android:textColor="#333333"
                android:layout_marginBottom="15dp"/>

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="none">
                <LinearLayout
                    android:id="@+id/containerCategories"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                </LinearLayout>
            </HorizontalScrollView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recomendado"
                android:textSize="20sp"
                android:textColor="#333333"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="15dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mapa_cercano"
                android:textSize="20sp"
                android:layout_marginTop="25dp"
                android:layout_gravity="center_horizontal"
                android:drawablePadding="8dp"
                app:drawableStartCompat="@drawable/ic_dialog_map"/>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginTop="12dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="4dp">

                <WebView
                    android:id="@+id/webViewMapa"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>